*** Facebook for WooCommerce Changelog ***

2021.03.xx - version 2.3.3
 * Tweak - Use the container price for Mix and Match products with per-item pricing mode

2021.03.02 - version 2.3.2
 * Tweak - Bump Facebook Marketing API version to 9.0

2021.02.23 - version 2.3.1
 * Fix - Fix errors when product set is empty
 * Fix - Ensure that events have an action_source

2021.02.16 - version 2.3.0
 * Feature - Add ability to create and assign products to Facebook product sets
 * Feature - Add support for Facebook App store flow
 * Tweak - Ask merchants to delete products when changing from sync to not sync state
 * Tweak - Remove business_management permission from login scopes
 * Tweak - Store paramaters for Commerce merchant settings ID and Instagram business ID
 * Fix - Fix Products::get_google_product_category_id_from_highest_category() to handle WP_Error
 * Fix - Fix random HELLO appearing in the category settings
 * Fix - Make sure that list of strings params are now converted to actual arrays. Fixes an issue with the use of the additional_features parameter

2020.11.19 - version 2.2.0
 * Feature - Add an Advertise tab in the Facebook settings page to manage Facebook ads from within WooCommerce
 * Tweak - Move the Facebook settings page into the Marketing menu item (WooCommerce 4.0+)
 * Fix - Move the filter `facebook_for_woocommerce_integration_pixel_enabled` initialization to avoid possible uncaught JavaScript errors in front end
 * Fix - Update field name and format for additional_variant_attribute to resolve Facebook catalog sync for variable products.

2020.11.04 - version 2.1.4
 * Fix - Ensure product variant attributes are correctly handled when checking for enhanced attribute values.

2020.10.29 - version 2.1.3
 * Fix - Prevent error triggered while trying to refund orders

2020.10.28 - version 2.1.2
 * Tweak - Default variation selection will be synced to Facebook if the default product variation is already synced