@@ -2,6 +2,7 @@
 
 2021.03.xx - version 2.3.3
  * Tweak - Use the container price for Mix and Match products with per-item pricing mode
+ * Tweak - Use bundle price and composite price methods for Bundle and Composite product types.
 
 2021.03.02 - version 2.3.2
  * Tweak - Bump Facebook Marketing API version to 9.0
